# fun-with-models

./: .gitignore  README.md  pyproject.toml
fun_with_models/: actions.py  getters.py  main.py  models.py  mutations.py
tests/: test_fun_with_models.py
